# jem-demo

./: .env.example  .gitignore  project-context.md  pyproject.toml
data/policies/: ewa_policy.md  leave_policy.md
docs/: architecture.md  epics.md  jem-interview-demo-plan.md  prd.md
scripts/: run_demo.py  seed_db.py
src/agents/: __init__.py  graph.py  llm.py  state.py
src/agents/nodes/: __init__.py  ewa_agent.py  hr_agent.py  intent_router.py  language_detect.py  policy_rag.py  response_format.py
src/cli/: __init__.py  demo.py  display.py
src/db/: __init__.py  connection.py  models.py  seed.py
src/i18n/: __init__.py  detector.py  translator.py
src/mcp_server/tools/: __init__.py  ewa_tools.py  hr_tools.py  policy_tools.py
src/rag/: vectorstore.py
tests/: test_agents.py  test_cli.py  test_db.py  test_ewa_tools.py  test_i18n.py  test_mcp_tools.py  test_policies.py
