[project]
name = "jem-hr-demo"
version = "0.1.0"
description = "Jem HR Interview Demo - MCP server with LangGraph orchestration and RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.0",
    "langchain-anthropic>=1.3.2",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "sqlalchemy>=2.0.46",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
